Add path reports
