# backend/pkg/restapi/handler/sitereports/main.go
@@ -1,6 +1,8 @@
 package sitereports
 
 import (
+	"encoding/base64"
+	"encoding/json"
 	"net/http"
 
 	"github.com/go-errors/errors"
@@ -64,6 +66,33 @@ func (h *Handler) ReadSitePageViewReport(w http.ResponseWriter, r *http.Request)
 	h.responder.JSON(w, http.StatusOK, organizationSite)
 }
 
+// ReadSitePathReport godoc
+// @Description Read path report for a site.
+// @Param filters query poeticmetric.SiteReportFilters true "Filters"
+// @Param cursor query string false "Pagination cursor"
+// @Router /site-reports/path [get]
+// @Security UserAccessTokenAuthentication
+// @Success 200 {array} poeticmetric.SitePathReport
+// @Summary Read path report
+// @Tags site-reports
+func (h *Handler) ReadSitePathReport(w http.ResponseWriter, r *http.Request) {
+	filters := middleware.GetSiteReportFilters(r)
+
+	paginationCursor, err := getPaginationCursor[poeticmetric.SitePathReportPaginationCursor](r)
+	if err != nil {
+		h.responder.Error(w, errors.Wrap(err, 0))
+		return
+	}
+
+	organizationSite, err := h.siteService.ReadSitePathReport(r.Context(), filters, paginationCursor)
+	if err != nil {
+		h.responder.Error(w, errors.Wrap(err, 0))
+		return
+	}
+
+	h.responder.JSON(w, http.StatusOK, organizationSite)
+}
+
 // ReadSiteVisitorReport godoc
 // @Description Read visitor report for a site.
 // @Param filters query poeticmetric.SiteReportFilters true "Filters"
@@ -81,4 +110,24 @@ func (h *Handler) ReadSiteVisitorReport(w http.ResponseWriter, r *http.Request) 
 	}
 
 	h.responder.JSON(w, http.StatusOK, organizationSite)
+}
+
+func getPaginationCursor[T any](r *http.Request) (*poeticmetric.SiteReportPaginationCursor[T], error) {
+	cursorString := r.URL.Query().Get("cursor")
+	if cursorString == "" {
+		return nil, nil
+	}
+
+	cursorBytes, err := base64.StdEncoding.DecodeString(cursorString)
+	if err != nil {
+		return nil, errors.Wrap(err, 0)
+	}
+
+	cursor := poeticmetric.SiteReportPaginationCursor[T]{}
+	err = json.Unmarshal(cursorBytes, &cursor.Data)
+	if err != nil {
+		return nil, errors.Wrap(err, 0)
+	}
+
+	return &cursor, nil
 }
